# ChangeLog for media-libs/libmpeg2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpeg2/ChangeLog,v 1.68 2009/02/06 20:03:09 jer Exp $

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> libmpeg2-0.5.1.ebuild:
  Stable for HPPA (bug #255151).

  23 Jan 2009; Brent Baude <ranger@gentoo.org> libmpeg2-0.5.1.ebuild:
  stable ppc64, bug 255151

  18 Jan 2009; Markus Meier <maekke@gentoo.org> libmpeg2-0.5.1.ebuild:
  x86 stable, bug #255151

  17 Jan 2009; nixnut <nixnut@gentoo.org> libmpeg2-0.5.1.ebuild:
  ppc stable #255151

  16 Jan 2009; Steve Dibb <beandog@gentoo.org> libmpeg2-0.5.1.ebuild:
  amd64 stable, bug 255151

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/altivec-fix-0.4.0b.diff:
  Fix patch with absolute paths.

*libmpeg2-0.5.1 (18 Jul 2008)

  18 Jul 2008; Alexis Ballier <aballier@gentoo.org> +libmpeg2-0.5.1.ebuild:
  version bump

  26 Oct 2007; Steve Dibb <beandog@gentoo.org> libmpeg2-0.4.0b.ebuild,
  libmpeg2-0.4.1.ebuild:
  Fix x11 RDEPEND/DEPEND

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libmpeg2-0.4.1.ebuild:
  ppc. stable

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> libmpeg2-0.4.1.ebuild:
  alpha stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> libmpeg2-0.4.1.ebuild:
  Stable on ppc64

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> libmpeg2-0.4.1.ebuild:
  amd64 stable

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> libmpeg2-0.4.1.ebuild:
  x86 stable

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> libmpeg2-0.4.1.ebuild:
  Stable on sparc

  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> libmpeg2-0.4.1.ebuild:
  Remove misc hacks that are no longer needed with the fix from #156252.

  26 Nov 2006; Alexis Ballier <aballier@gentoo.org> libmpeg2-0.4.0b.ebuild,
  libmpeg2-0.4.1.ebuild:
  Honour cflags, bug #156252

  15 Nov 2006; Matthias Schwarzott <zzam@gentoo.org> libmpeg2-0.4.1.ebuild: