@@ -2,6 +2,6 @@ AUX libmpeg2-0.4.1-use-readelf-for-test.patch 869 RMD160 55939dd2417015c1bf8052f
 DIST libmpeg2-0.5.1.tar.gz 524776 RMD160 00b2d669655ed3f7a176f5eecc925045159a0301 SHA1 0f9163d8fd52db5f577ebe45636f674252641fd7 SHA256 dee22e893cb5fc2b2b6ebd60b88478ab8556cb3b93f9a0d7ce8f3b61851871d4
 DIST mpeg2dec-0.4.1.tar.gz 494539 RMD160 5377ae45abdd37fabcea6d3d0a9d74e493b84483 SHA1 80be8b16dff4caa4253470d1a3b563fdc0177fcb SHA256 c74a76068f8ec36d4bb59a03bf1157be44118ca02252180e8b358b0b5e3edeee
 EBUILD libmpeg2-0.4.1.ebuild 1462 RMD160 49e7daa81f3376fdaf93eeb94b29b11bc62c30f7 SHA1 ba61262d19ff0123c901177a9a7557bf6cddb866 SHA256 9f6cca5ef969ef8cad34c0adfbf84cb0bc40f8519843d0a183c55d7e546f30ef
-EBUILD libmpeg2-0.5.1.ebuild 1403 RMD160 738a3a7afa9f6c53d48e021ab6eb7339eac08740 SHA1 992264e9c4d93fbfc53400e9a0b0743d24149087 SHA256 014e6e74539d74e19cf1981289a6846ec2ebb973ea04b9b962598ddc167d37bd
-MISC ChangeLog 8320 RMD160 9e0b0d72336af01419ed22d226809239e5aa19e4 SHA1 5183f2845b3684e7a4a01c43ec92d9eb4992f297 SHA256 2ef970769044c34880c89c01f7b8e41828ad1f18396a2aca9281577ca7c60c80
+EBUILD libmpeg2-0.5.1.ebuild 1336 RMD160 1943288670218e4cfdf49a92c0b58dcbcb97cbd4 SHA1 b5c98865987626b6d75ef7feb1d6c618f2987294 SHA256 ee0196390163f2a1a7099e14b061771a482435adb24464028ce05d1632edb062
+MISC ChangeLog 8707 RMD160 a756cb1a2317fee16646fca8abac21ae735c4fe7 SHA1 34a204c792f7d78a88699e00916d06819df3e221 SHA256 cdb4d418e4a573e0899b252e31ab092114cd5e50a1b4dda5ca8a1f9b0b157431
 MISC metadata.xml 223 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 SHA1 ea8c387229caaf4b0d3c9fbef9143b70dcae0b0d SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812
