@@ -1,6 +1,16 @@
 # ChangeLog for media-libs/libmpeg2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpeg2/ChangeLog,v 1.68 2009/02/06 20:03:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpeg2/ChangeLog,v 1.71 2009/02/18 19:03:52 armin76 Exp $
+
+  18 Feb 2009; Raúl Porcel <armin76@gentoo.org> libmpeg2-0.5.1.ebuild:
+  ia64/sh/sparc stable wrt #255151
+
+  18 Feb 2009; Tobias Klausmann <klausman@gentoo.org> libmpeg2-0.5.1.ebuild:
+  Stable on alpha, bug #255151
+
+  18 Feb 2009; Alexis Ballier <aballier@gentoo.org> libmpeg2-0.5.1.ebuild:
+  drop supposed test suite fix that causes test failures on some platforms,
+  bug #255151
 
   06 Feb 2009; Jeroen Roovers <jer@gentoo.org> libmpeg2-0.5.1.ebuild:
   Stable for HPPA (bug #255151).
